# RitsukiBot

./: .env  .env.dev  .env.prod  .gitignore  LICENSE  README.md  bot.py  pyproject.toml  requirements.txt
RitsukiBot/: .env  README.md  bot.py  pyproject.toml  pyproject.toml.example
RitsukiBot/RitsukiBot/: config.sample.py
RitsukiBot/RitsukiBot/res/docs/: 水位记录.xlsx
RitsukiBot/RitsukiBot/res/plugins/: sys.py  usage.py
RitsukiBot/data/epic/: config.json
RitsukiBot/res/docs/: Please upload water_lv File.txt  data.json  dict.txt  请自行上传水位记录文件.txt
RitsukiBot/res/plugins/: radiation.py  update.py
RitsukiBot/res/plugins/a2d/: __init__.py  function.py
RitsukiBot/res/plugins/anti_recall/: __init__.py  data_resources.py
RitsukiBot/res/plugins/pixiv/: __init__.py  function.py
RitsukiBot/res/plugins/rss/: __init__.py  data_resource.sample.py  function.py
RitsukiBot/res/plugins/water_lv/: __init__.py  function.py
RitsukiBot/res/plugins/yande/: __init__.py  function.py
RitsukiBot/src/plugins/60s/: __init__.py  config.py  data_source.py
RitsukiBot/src/plugins/epic/: __init__.py  schema.py
RitsukiBot/src/plugins/magnet/: __init__.py
RitsukiBot/utils/: canvas.py
src/plugins/: setus.py
src/plugins/60s/: __init__.py  data_source.py
src/plugins/BiliDynamic/: __init__.py  config.py  da  data_resource.py
src/plugins/a2d/: __init__.py  data_resource.py
src/plugins/epic/: __init__.py  config.py  data_resource.py  data_resources.py  data_source.py
src/plugins/radiation/: __init__.py
src/plugins/setu/: __init__.py  anti_river_crab.py  config.py  data_resource.py  get_setu.py  schema.py  setus.py
src/plugins/yande/: __init__.py
utils/: utils.py
(+16 files in other folders)
