[tool.poetry]
name = "RitsukiBot"
version = "0.1.0"
description = "RitsukiBot"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.2"
nonebot2 = "^2.0.0-beta.1"
ujson = "^5.1.0"
PicImageSearch = "^2.2.6"
nonebot-adapter-onebot = "^2.0.0-beta.1"
nonebot-plugin-apscheduler = "^0.1.2"

[tool.poetry.dev-dependencies]
nb-cli = "^0.6.5"

[tool.nonebot]
plugins = []
plugin_dirs = ["src/plugins"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
