[tool.poetry]
name = "RitsukiBot"
version = "0.1.0"
description = "RitsukiBot"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.5"
ujson = "^5.1.0"
nonebot-adapter-onebot = "^2.0.0-beta.1"
nonebot-plugin-apscheduler = "^0.1.2"
nb-cli = "^0.6.6"
feedparser = "^6.0.8"

[tool.nonebot]
plugins = []
plugin_dirs = ["src/plugins"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
